2008-3-20 Yu-Sung Su     <ys463@columbia.edu>  
   * R/mi.categorical: fix idx name of the random imputed values
   * R/mi.polr: fix idx name of the random imputed values


2008-3-20 Yu-Sung Su     <ys463@columbia.edu>  
   * DESCRIPTION (Version, Date): 0.04-5
   * R/mi: fix all(con.check) error

2008-3-11 Yu-Sung Su     <ys463@columbia.edu>  
   * DESCRIPTION (Version, Date): 0.04-4
   * pass Rhat option to mi()


2008-3-10 Yu-Sung Su     <ys463@columbia.edu>  
   * DESCRIPTION (Version, Date): 0.04-3
   * fix random jump, get coef and start from model fit

2008-3-5 Yu-Sung Su     <ys463@columbia.edu>  
   * DESCRIPTION (Version, Date): 0.04-2
   * add mi.count
   * add tpye "proportion"


2008-2-23 Yu-Sung Su     <ys463@columbia.edu>  
   * R/coef: add coef for mi.lm and mi.glm
   * R/se.coef: add se.coef for mi.lm and mi.glm


2008-2-4 Yu-Sung Su     <ys463@columbia.edu>  
   * man/prepocess: new doc
   * R/mi.continuous: when start is null, no longer set n.iter=1
   * R/mi.dichotomous: when start is null, no longer set n.iter=1
   * R/mi.preprocess: new mi.preprocess and mi.postprocess
   * R/typecast: new typecast, new type (postitive continuous)
   * R/imputed: add mi.categorical for imputed


2008-1-31 Yu-Sung Su     <ys463@columbia.edu>  
   * R/glm.mi: auto.postprocess
   * R/lm.mi: auto.postprocess


2008-1-31 Yu-Sung Su     <ys463@columbia.edu>  
   * DESCRIPTION (Version, Date): 0.03-0.1


2008-1-26 Yu-Sung Su     <ys463@columbia.edu>  
   * clean up redundant code
   * no more squareroot-continuous, logscale-continuous, mi.mixed, mi.start, mi.matrix
   * R/AllInternal: add internal function from mi.info
   * R/mi.info: 
      1. remove some internal functions to AllInternal
      2. correct imp.formula and move to AllInternal
  

2008-1-21 Yu-Sung Su     <ys463@columbia.edu>  
   * man/mi: description about add.priors.
   * R/mi: merge augment.data and K into add.priors.

2008-1-17 Yu-Sung Su     <ys463@columbia.edu>  