@@ -1,3 +1,11 @@
+2008-3-31 Yu-Sung Su     <ys463@columbia.edu>  
+   * R/coef: add mi.mer method
+   * R/se.coef: add mi.mer method
+   * R/display: add mi.mer method
+   * R/bayesglm.mi: add bayesglm.mi
+   * R/lmer.mi: add lmer.mi, glmer.mi
+
+
 2008-3-20 Yu-Sung Su     <ys463@columbia.edu>  
    * R/mi.categorical: fix idx name of the random imputed values
    * R/mi.polr: fix idx name of the random imputed values
